# lisa

./: .gitattributes  .gitignore  .test.env  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
agenda/: Dockerfile  app.py
src/lisa/: app.py  recognizer.py  scheduler.py
src/lisa/agent_tools/appointment/: recognizers.py  schedulers.py  time_slot_fetcher.py
src/lisa/agents/: base_agent.py  tool_call_agent.py
src/lisa/exceptions/: token_limit_error.py
src/lisa/models/: assistant_chat_message.py  base_agent_usage.py  base_chat_message.py  base_llm_message.py  chat_role.py  llm_config.py  llm_response.py  system_chat_message.py  tool_call_config.py  tool_call_response.py  tool_chat_message.py  user_chat_message.py
src/lisa/utils/: function_calling.py
tests/: test_scheduler.py
